<resources>
    <string name="app_name">NoNoShow</string>
    <string name="nav_header_title">로그인 해 주세요</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search_by_phoneNum">핸드폰번호로 검색</string>
    <string name="menu_signIn">로그인/회원가입</string>
    <string name="menu_booking_main">매장검색 / 예약</string>
    <string name="menu_signUp">회원가입</string>

    <string name="text_search_hint">핸드폰번호로 검색</string>
    <string name="text_search_with_name">매장이름으로 검색</string>
    <string name="text_noShowDes">신뢰도</string>
    <string name="text_management">관리</string>
    <string name="text_ID">아이디</string>
    <string name="text_PW">패스워드</string>
    <string name="logoimage">LOGOImage</string>
    <string name="text_login">로그인</string>
    <string name="text_SignUp">회원가입</string>
    <string name="text_autoLogin">로그인 상태 유지</string>
    <string name="checkimage">checkImage</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="phoneNum">핸드폰번호</string>
    <string name="PW_check">비밀번호확인</string>
    <string name="signout">로그아웃</string>
    <string name="text_load_more">load more</string>
    <string name="text_booking">예약하기</string>
</resources>
