<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_signIn">

    <fragment
        android:id="@+id/nav_search_by_phoneNum"
        android:name="com.example.nonoshow.ui.search.SearchFragment"
        android:label="@string/menu_search_by_phoneNum"
        tools:layout="@layout/fragment_search_by_phone_num" />

    <fragment
        android:id="@+id/nav_signIn"
        android:name="com.example.nonoshow.ui.signIn.SignInFragment"
        android:label="@string/menu_signIn"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.nonoshow.ui.bookingMain.BookingMainFragment"
        android:label="@string/menu_booking_main"
        tools:layout="@layout/fragment_booking_main" />

    <fragment
        android:id="@+id/nav_signUp"
        android:name="com.example.nonoshow.ui.signUp.SignUpFragment"
        android:label="@string/menu_signUp"
        tools:layout="@layout/fragment_sign_up" />

</navigation>