<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/logoimage"
        app:layout_constraintBottom_toTopOf="@+id/editText_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_transparent" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorLogo"
        android:text="@string/text_login"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorLogo"
        android:text="@string/text_SignUp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signIn" />

    <EditText
        android:id="@+id/editText_ID"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_customize_white"
        android:ems="10"
        android:hint="@string/text_ID"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="25sp"
        android:maxLength="18"
        app:layout_constraintBottom_toTopOf="@+id/editText_PW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_PW"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_customize_white"
        android:ems="10"
        android:hint="@string/text_PW"
        android:inputType="textPassword"
        android:maxLength="24"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autoLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <ImageView
        android:id="@+id/checkImage"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/checkimage"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editText_PW"
        app:srcCompat="@drawable/check_gray" />
</androidx.constraintlayout.widget.ConstraintLayout>