<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/logoimage"
                app:srcCompat="@drawable/logo_transparent" />

            <TextView
                android:id="@+id/title_SignUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/text_SignUp"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/nickName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@drawable/edit_text_customize_white"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="25sp"
                android:autofillHints="" tools:targetApi="o" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@drawable/edit_text_customize_white"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@drawable/edit_text_customize_white"
                android:ems="10"
                android:hint="@string/phoneNum"
                android:inputType="phone"
                android:maxLength="18"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@drawable/edit_text_customize_white"
                android:ems="10"
                android:hint="@string/text_PW"
                android:inputType="textPassword"
                android:maxLength="24"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/password_check"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@drawable/edit_text_customize_white"
                android:ems="10"
                android:hint="@string/PW_check"
                android:inputType="textPassword"
                android:maxLength="24"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:height="60dp"
                android:background="@color/colorLogo"
                android:text="@string/text_SignUp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>